
- #8951: let make's default target build the compiler
  (Sébastien Hinderer, review by David Allsopp)

- #8985, #8986: fix generation of the primitives when the locale collation is
  incompatible with C.
  (David Allsopp, review by Nicolás Ojeda Bär, report by Sebastian Rasmussen)

- #8995: allow developers to specify frequently-used configure options in
  Git (ocaml.configure option) See HACKING.adoc for further details.
  (David Allsopp, review by Gabriel Scherer)

### Compiler user-interface and warnings:

- #8702, #8777: improved error messages for fixed row polymorphic variants
  (Florian Angeletti, report by Leo White, review by Thomas Refis)

- #8874: add tests for typechecking error messages and pack them into
  pretty-printing boxes.
  (Oxana Kostikova, review by Gabriel Scherer)

- #8914: clarify the warning on unboxable types used in external primitives (61)
  (Gabriel Scherer, review by Florian Angeletti, report on the Discourse forum)

### Bug fixes:

- #6922, #8955: Fix regression with -principal type inference for inherited
  methods, allowing to compile ocamldoc with -principal
  (Jacques Garrigue, review by Leo White)

- #7925, #8611: fix error highlighting for exceptionally
  long toplevel phrases
  (Kyle Miller, reported by Armaël Guéneau, review by Armaël Guéneau
   and Nicolás Ojeda Bär)

- #8622: Don't generate #! headers over 127 characters.
  (David Allsopp, review by Xavier Leroy and Stephen Dolan)

- #8715: minor bugfixes in CamlinternalFormat; removes the unused
  and misleading function CamlinternalFormat.string_of_formatting_gen
  (Gabriel Scherer and Florian Angeletti,
   review by Florian Angeletti and Gabriel Radanne)

- #8792, #9018: Possible (latent) bug in Ctype.normalize_type
  removed incrimined Btype.log_type, replaced by Btype.set_type
  (Jacques Garrigue, report by Alain Frisch, review by Thomas Refis)

- #8855, #8858: Links for tools not created when installing with