@@ -45,6 +45,7 @@ _build
 /autom4te.cache
 /ocamlc
 /config.cache
+/ocaml-*.cache
 /config.log
 /config.status
 /libtool
